objects/ssot__GameParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GameDefinitionId__c</fullName>
        <label>Game Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Game Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729238099376_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameParticipant_GameDefinitionId_map_rel</label>
        <referenceTo>ssot__GameDefinition__dlm</referenceTo>
        <relationshipLabel>GameParticipant_GameDefinitionId_map_rel</relationshipLabel>
        <relationshipName>rel_1729238099376_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729238119083_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameParticipant_ParticipantId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GameParticipant_ParticipantId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1729238119083_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729238234487_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GameParticipant_ParticipantId_map_Ac_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>GameParticipant_ParticipantId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1729238234487_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>